[tool.poetry]
name = "detect-track"
version = "0.1.0"
description = ""
authors = ["Shaurya Parashar <shauryaparashar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "2.1.2", optional = true}
torchvision = {version = "0.16.2", optional = true}
torchaudio = {version = "2.1.2", optional = true}
opencv-python = "^4.11.0.86"
transformers = "^4.51.3"
addict = "^2.4.0"
timm = "^1.0.15"
cython = "^3.0.12"
loguru = "^0.7.3"
thop = "^0.1.1.post2209072238"
numpy = "1.26.4"
yapf = "^0.43.0"
matplotlib = "^3.10.1"
pycocotools = "^2.0.8"
supervision = {version = "0.13.0", python = "<3.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
